--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="spinner">
       </div>
     </div>
-    <button class="button">Start</button>
+    <div class="button" role="button">Start</div>
     <div class="box">
       <div></div>
     </div>
