add a title and background color

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./src/styles.css">
-  <title>Choice Spinner</title>
+  <title>Wheel of Fortune</title>
 </head>
 <body>
   <main>
+    <h1>Wheel of Fortune</h1>
     <div class="container">
       <p class="marker"></p>
       <div class="spinner">
